--- a/index2.html
+++ b/index2.html
@@ -64,10 +64,10 @@
                 sống cùng em, muốn làm điều gì đó đặc biệt, muốn xây dựng một
                 tương lai mà chúng ta có thể bước đi cùng nhau. Anh muốn tình
                 yêu của chúng ta bắt đầu, và chúng ta sẽ cùng nhau viết nên
-                nhữung trang mới của câu chuyện này. Em có đồng ý làm người yêu
-                của anh nhé? Hãy để anh và em cùng tình yêu của chúng ta bắt
-                đầu, và chúng ta sẽ cùng nhau viết nên nhữung trang mới của câu
-                chuyện này. ❤️❤️❤️❤️❤️❤️
+                nhữung trang mới của câu chuyện này. Em đồng ý làm người yêu của
+                anh nhé? Hãy để anh và em cùng tình yêu của chúng ta bắt đầu, và
+                chúng ta sẽ cùng nhau viết nên những trang mới của câu chuyện
+                này. ❤️❤️❤️❤️❤️❤️
               </div>
               <div class="col-12 text-center">
                 <div class="btn btn-primary mb-5">
